[package]
name = "raspberry-web"
version = "0.1.0"
authors = ["Troels Mikkelsen <troelsmikkelsen@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Web server for controlling the GPIO pins on Raspberry Pi."

[dependencies]
actix = "0.7.9"
actix-web = "0.7.17"
chrono = { version = "0.4.6", features = ["serde"] }
clap = "2.32.0"
config = "0.9"
diesel = { version = "1.3.0", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = "1.3.0" # For tests
dotenv = "0.13.0"
env_logger = "0.6.0"
futures = "0.1"
log = { version = "0.4", features = ["std", "serde"] }
parking_lot = "0.6"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde="^1.0.82"
serde_derive="^1.0.82"
serde_json="^1.0.33"

[target.'cfg(target_arch = "arm")'.dependencies]
rppal = "0.10.0"

[package.metadata.deb]
maintainer = "Troels Mikkelsen <troelsmikkelsen@gmail.com>"
copyright = "2018, Troels Mikkelsen"
depends = "$auto, systemd"
conf-files = [
    "/usr/local/rpiweb/configuration.toml", 
    "/etc/systemd/system/rpiweb.service",
]
extended-description = """\
Web server for controlling the GPIO pins on Raspberry Pi.\
"""
section = "admin"
priority = "optional"
assets = [
    ["target/release/rpiweb", "/usr/local/bin/", "755"],
    ["config/configuration.toml", "/usr/local/rpiweb/", "644"],
    ["rpiweb-db/raspberry-web.sqlite", "/usr/local/bin/rpiweb-db/raspberry-web.sqlite", "644"],
    ["config/rpiweb.service", "/etc/systemd/system/", "644"],
]